# G-DriveXP

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md
data/: org.gnome.FedoraDrive.desktop
packaging/: build-release.sh  g-drive-xp.spec  install.sh
scripts/: install-icons.sh
src/: config.rs  main.rs
src/auth/: AGENTS.md  keyring.rs  mod.rs  oauth.rs
src/db/: AGENTS.md  mod.rs  repository.rs  schema.sql
src/fuse/: AGENTS.md  attr.rs  filesystem.rs  mod.rs  shortcuts.rs
src/gdrive/: AGENTS.md  client.rs  error.rs  mod.rs
src/gui/: AGENTS.md  app_model.rs  history.rs  mod.rs  tray.rs
src/ipc/: AGENTS.md  mod.rs  server.rs
src/mirror/: AGENTS.md  manager.rs  mod.rs  watcher.rs
src/sync/: AGENTS.md  bootstrap.rs  local_sync_manager.rs  local_watcher.rs  mod.rs  syncer.rs  uploader.rs
src/utils/: AGENTS.md  cleanup.rs  hash.rs  mod.rs  mount.rs  shutdown.rs
